fix cropper

--- a/resources/assets/styles/components/drop-photo.scss
+++ b/resources/assets/styles/components/drop-photo.scss
@@ -1,6 +1,7 @@
 .drop-photo {
   width: 100%;
   height: 400px;
+  overflow: hidden;
   cursor: pointer;
 
   background-color: theme-color("light-gray2");
